k3s/manifests/acl-service.yaml
---
# DB StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: acl-db
  namespace: techietenka
spec:
  serviceName: acl-db # You should define a headless service with this name
  replicas: 1
  selector:
    matchLabels:
      app: acl-db
  template:
    metadata:
      labels:
        app: acl-db
    spec:
      containers:
        - name: surrealdb
          image: surrealdb/surrealdb:v3.2.4
          securityContext:
            runAsUser: 0
          args:
            [
              "start",
              "--log",
              "debug",
              "--user",
              "$(DATABASE_USER)",
              "--pass",
              "$(DATABASE_PASSWORD)",
              "--bind",
              "0.0.0.0:8000",
              "surrealkv:/acl-db-data/aclv3.db",
            ]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: acl-db-volume
              mountPath: /acl-db-data
  volumeClaimTemplates:
    - metadata:
        name: acl-db-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
# ACL Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acl-service
  labels:
    app: acl-service
  namespace: techietenka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acl-service
  template:
    metadata:
      labels:
        app: acl-service
    spec:
      imagePullSecrets:
        - name: registry-auth
      containers:
        - name: acl
          image: registry.techietenka.com/acl-service:latest
          securityContext:
            runAsUser: 0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3007
            - name: grpc
              containerPort: 50051
          readinessProbe:
            httpGet:
              path: /ready
              port: 3007
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3007
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: logs
              mountPath: /logs
            - name: acl-rsa-keys
              mountPath: /app/crypto/
              readOnly: true
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: acl-logs-pvc
        - name: acl-rsa-keys
          secret:
            secretName: acl-rsa-keys

---
# ACL DB Headless Service(Internal)
apiVersion: v1
kind: Service
metadata:
  name: acl-db
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: acl-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  # type: ClusterIP

---
# ACL DB External Service
apiVersion: v1
kind: Service
metadata:
  name: acl-db-external
  namespace: techietenka
spec:
  type: ClusterIP
  selector:
    app: acl-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
# ACL Service External
apiVersion: v1
kind: Service
metadata:
  name: acl-service
  namespace: techietenka
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    # - IPv6
  selector:
    app: acl-service
  ports:
    - name: http
      port: 3007
      targetPort: 3007
    # - name: grpc
    #   port: 50051
    #   targetPort: 50051
  type: ClusterIP

---
# ACL Headless Service
apiVersion: v1
kind: Service
metadata:
  name: acl-service-internal
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: acl-service
  ports:
    - name: http
      port: 3007
      targetPort: 3007
    - name: grpc
      port: 50051
      targetPort: 50051
  # type: ClusterIP
