k3s/manifests/email-service.yaml
---
# DB StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: email-db
  namespace: techietenka
spec:
  serviceName: email-db # You should define a headless service with this name
  replicas: 1
  selector:
    matchLabels:
      app: email-db
  template:
    metadata:
      labels:
        app: email-db
    spec:
      containers:
        - name: surrealdb
          image: surrealdb/surrealdb:v3.2.4
          securityContext:
            runAsUser: 0
          args:
            [
              "start",
              "--log",
              "debug",
              "--user",
              "$(DATABASE_USER)",
              "--pass",
              "$(DATABASE_PASSWORD)",
              "--bind",
              "0.0.0.0:8000",
              "surrealkv:/email-db-data/emailv3.db",
            ]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: email-db-volume
              mountPath: /email-db-data
  volumeClaimTemplates:
    - metadata:
        name: email-db-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
# Email Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  labels:
    app: email-service
  namespace: techietenka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      imagePullSecrets:
        - name: registry-auth
      containers:
        - name: email
          image: registry.techietenka.com/email-service:latest
          securityContext:
            runAsUser: 0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3019
            - name: grpc
              containerPort: 50052
          readinessProbe:
            httpGet:
              path: /ready
              port: 3019
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3019
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: logs
              mountPath: /logs
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: email-logs-pvc

---
# Email External Service
apiVersion: v1
kind: Service
metadata:
  name: email-service
  namespace: techietenka
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    # - IPv6
  selector:
    app: email-service
  ports:
    - name: http
      port: 3019
      targetPort: 3019
    - name: grpc
      port: 50052
      targetPort: 50052
  type: ClusterIP
---
# Email DB Headless Service(Internal)
apiVersion: v1
kind: Service
metadata:
  name: email-db
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: email-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  # type: ClusterIP

---
# Email DB External Service
apiVersion: v1
kind: Service
metadata:
  name: email-db-external
  namespace: techietenka
spec:
  type: ClusterIP
  selector:
    app: email-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
# Email Headless Service
apiVersion: v1
kind: Service
metadata:
  name: email-service-internal
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: email-service
  ports:
    - name: http
      port: 3019
      targetPort: 3019
    - name: grpc
      port: 50052
      targetPort: 50052
  # type: ClusterIP
