k3s/manifests/payments-service.yaml
---
# DB StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payments-db
  namespace: techietenka
spec:
  serviceName: payments-db # You should define a headless service with this name
  replicas: 1
  selector:
    matchLabels:
      app: payments-db
  template:
    metadata:
      labels:
        app: payments-db
    spec:
      containers:
        - name: surrealdb
          image: surrealdb/surrealdb:v3.2.4
          securityContext:
            runAsUser: 0
          args:
            [
              "start",
              "--log",
              "debug",
              "--user",
              "$(DATABASE_USER)",
              "--pass",
              "$(DATABASE_PASSWORD)",
              "--bind",
              "0.0.0.0:8000",
              "surrealkv:/payments-db-data/paymentsv3.db",
            ]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: payments-db-volume
              mountPath: /payments-db-data
  volumeClaimTemplates:
    - metadata:
        name: payments-db-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
# Payments Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  labels:
    app: payments-service
  namespace: techietenka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-service
  template:
    metadata:
      labels:
        app: payments-service
    spec:
      imagePullSecrets:
        - name: registry-auth
      containers:
        - name: payments
          image: registry.techietenka.com/payments-service:latest
          securityContext:
            runAsUser: 0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3013
            - name: grpc
              containerPort: 50056
          readinessProbe:
            httpGet:
              path: /ready
              port: 3013
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3013
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: logs
              mountPath: /logs
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: payments-logs-pvc

---
# Payments DB Headless Service(Internal)
apiVersion: v1
kind: Service
metadata:
  name: payments-db
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: payments-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  # type: ClusterIP

---
# Payments DB External Service
apiVersion: v1
kind: Service
metadata:
  name: payments-db-external
  namespace: techietenka
spec:
  type: ClusterIP
  selector:
    app: payments-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
# Payments Service External
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: techietenka
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    # - IPv6
  selector:
    app: payments-service
  ports:
    - name: http
      port: 3013
      targetPort: 3013
    # - name: grpc
    #   port: 50056
    #   targetPort: 50056
  type: ClusterIP

---
# Payments Headless Service
apiVersion: v1
kind: Service
metadata:
  name: payments-service-internal
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: payments-service
  ports:
    - name: http
      port: 3013
      targetPort: 3013
    - name: grpc
      port: 50056
      targetPort: 50056
  # type: ClusterIP
