k3s/manifests/shared-service.yaml
---
# DB StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shared-db
  namespace: techietenka
spec:
  serviceName: shared-db # You should define a headless service with this name
  replicas: 1
  selector:
    matchLabels:
      app: shared-db
  template:
    metadata:
      labels:
        app: shared-db
    spec:
      containers:
        - name: surrealdb
          image: surrealdb/surrealdb:v3.2.4
          securityContext:
            runAsUser: 0
          args:
            [
              "start",
              "--log",
              "debug",
              "--user",
              "$(DATABASE_USER)",
              "--pass",
              "$(DATABASE_PASSWORD)",
              "--bind",
              "0.0.0.0:8000",
              "surrealkv:/shared-db-data/sharedv3.db",
            ]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-db-volume
              mountPath: /shared-db-data
  volumeClaimTemplates:
    - metadata:
        name: shared-db-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
# Shared Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shared-service
  labels:
    app: shared-service
  namespace: techietenka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-service
  template:
    metadata:
      labels:
        app: shared-service
    spec:
      imagePullSecrets:
        - name: registry-auth
      containers:
        - name: shared
          image: registry.techietenka.com/shared-service:latest
          securityContext:
            runAsUser: 0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3002
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: logs
              mountPath: /logs
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: shared-logs-pvc

---
# Shared DB External Service
apiVersion: v1
kind: Service
metadata:
  name: shared-db-external
  namespace: techietenka
spec:
  type: ClusterIP
  selector:
    app: shared-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
# Shared DB Headless Service
apiVersion: v1
kind: Service
metadata:
  name: shared-db
  namespace: techietenka
spec:
  clusterIP: None # 👈 Headless!
  selector:
    app: shared-db
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  # type: ClusterIP

---
# Shared Service
apiVersion: v1
kind: Service
metadata:
  name: shared-service
  namespace: techietenka
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    # - IPv6
  selector:
    app: shared-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
  type: ClusterIP
