k3s/manifests/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: techietenka
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.priority: "1"
    traefik.ingress.kubernetes.io/router.middlewares: "techietenka-surrealist-ipallowlist@kubernetescrd,techietenka-strip-acl@kubernetescrd,techietenka-strip-files@kubernetescrd,techietenka-strip-shared@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: api.techietenka.com
      http:
        paths:
          - path: /acl
            pathType: Prefix
            backend:
              service:
                name: acl-service
                port:
                  number: 3007
          - path: /files
            pathType: Prefix
            backend:
              service:
                name: files-service
                port:
                  number: 3001
          # - path: /email
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: email-service
          #       port:
          #         number: 3019
          - path: /shared
            pathType: Prefix
            backend:
              service:
                name: shared-service
                port:
                  number: 3002
  tls:
    - hosts:
        - api.techietenka.com
      secretName: api-tls-secret
