k3s/manifests/argocd.yaml
# Ingress for HTTP -> HTTPS redirection
# Redirects HTTP -> HTTPS for argocd.techietenka.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress-http
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: "techietenka-redirect-to-https@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.techietenka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
---
# Ingress for HTTPS
# Serves the ArgoCD GUI/API on argocd.techietenka.com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.options: "default"
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.techietenka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.techietenka.com
      secretName: argocd-techietenka-tls
