k3s/manifests/egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: techietenka
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
